--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "formik": "^2.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
