--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.18.1",
-    "npm" : "6.14.5"
+    "node": "^12.x",
+    "npm" : "^6.x"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
