--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "engines": {
     "node": "^12.x",
-    "npm" : "^6.x"
+    "npm": "^6.x"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.9",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
