--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "apexcharts": "^3.22.2",
     "axios": "^0.21.0",
     "date-fns": "^2.14.0",
     "formik": "^2.2.5",
     "formik-material-ui": "^3.0.0",
     "formik-material-ui-pickers": "0.0.11",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
