--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Testing test_endpoint_logic.py
       run: |
-        sudo backend/unit_tests/test_endpoint_logic.py
+        sudo python backend/unit_tests/test_endpoint_logic.py
     - name: Testing test_sql_tables.py
       run: |
-        sudo backend/unit_tests/test_sql_tables.py
+        sudo python backend/unit_tests/test_sql_tables.py
