--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -98,7 +98,7 @@ jobs:
         pip install wcwidth==0.2.5
         pip install Werkzeug==1.0.1
         pip install wrapt==1.12.1
-        zpip install ipp==3.4.0
+        pip install ipp==3.4.0
     - name: Testing test_sql_tables.py
       run: |
         sudo python backend/unit_tests/test_sql_tables.py
