--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,6 +30,7 @@ jobs:
         sudo pip install flask-socketio
         sudo pip install eventlet
         sudo pip install Flask-SQLAlchemy==2.1
+        sudo pip install unittest2
     - name: Testing test_sql_tables.py
       run: |
         sudo python backend/unit_tests/test_sql_tables.py
